plugins {
    id 'idea'
    id 'java'
    id 'groovy'
//    id 'maven'
    id("io.freefair.lombok") version "8.6"
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.1.0'
//    id "org.beryx.jlink" version "3.0.1"
}

group = 'kyma.net'
version = '1.0-SNAPSHOT'

description = "Kyma music player and manager"

sourceCompatibility = 21
targetCompatibility = 21

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

repositories {

    maven { url "https://repo1.maven.org/maven2" }
    maven { url "https://raw.github.com/khuzzuk/MessageBus/mvn-repo/" }
    flatDir {
        dirs 'lib'
    }
}

javafx {
    version = "21"
    modules = ['javafx.controls', 'javafx.graphics', 'javafx.fxml']
}

ext {
    luceneVersion = '9.10.0'
    commonsLangVersion = '3.7'
    commonsCollectionsVersion = '4.1'
    jacksonVersion = '2.9.4'
    log4jVersion = '2.13.2'
    lombokVersion = '1.18.10'
}

dependencies {
    implementation group: 'org.apache.lucene', name: 'lucene-core', version: luceneVersion
    implementation group: 'org.apache.commons', name: 'commons-lang3', version: commonsLangVersion
    implementation group: 'org.apache.commons', name: 'commons-collections4', version: commonsCollectionsVersion
    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: jacksonVersion
    implementation group: 'org.apache.logging.log4j', name: 'log4j-core', version: log4jVersion
    implementation group: 'org.apache.logging.log4j', name: 'log4j-jcl', version: log4jVersion
    implementation group: 'com.googlecode.soundlibs', name: 'jlayer', version: '1.0.1.4'
    implementation group: 'com.googlecode.soundlibs', name: 'tritonus-share', version: '0.3.7.4'
    implementation group: 'com.googlecode.soundlibs', name: 'mp3spi', version: '1.9.5.4'
    implementation group: 'com.github.trilarion', name: 'vorbis-support', version: '1.1.0'
    implementation name: 'jaudiotagger-2.2.6-SNAPSHOT'
    implementation name: 'jflac-1.3'
    implementation name: 'jaad-0.8.6f'
    implementation group: 'pl.khuzzuk', name: 'message-bus', version: '2.0.1'
    implementation group: 'org.jsoup', name: 'jsoup', version: '1.11.3'
    implementation group: 'org.controlsfx', name: 'controlsfx', version: '11.0.0'

    runtimeOnly "org.openjfx:javafx-graphics:$javafx.version:win"

    testImplementation group: 'org.codehaus.groovy', name: 'groovy-all', version: '2.4.13'
    testImplementation group: 'org.testng', name: 'testng', version: '6.14.3'
    testImplementation group: 'org.spockframework', name: 'spock-core', version: '1.1-groovy-2.4'
    testImplementation group: 'org.awaitility', name: 'awaitility', version: '3.1.0'
    compileOnly group: 'org.projectlombok', name: 'lombok', version: lombokVersion
    annotationProcessor group: 'org.projectlombok', name: 'lombok', version: lombokVersion
}

mainClassName = 'net.kyma.Manager'

jar {
    manifest {
        attributes 'Main-class': 'net.kyma.Manager'
    }
    from {
        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
    }
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
}

//jlink {
//    options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
//    launcher {
//        name = 'kyma'
//        jvmArgs = ['--add-exports', 'javafx.base/com.sun.javafx.event=org.controlsfx.controls']
//    }
//    forceMerge('log4j-api')
//}
